# rush

./: Cargo.toml  LICENSE  README.md  TODO.md  registry.toml
.github/workflows/: build-test.yml  ci.yml  manual-build.yml  registry-verify.yml  release.yml
scripts/: install.sh  pre-pr.sh
src/: cli.rs  core.rs  lib.rs  main.rs  models.rs  ui.rs
src/core/: clean.rs  dev.rs  install.rs  query.rs  tests.rs  uninstall.rs  update.rs  util.rs
tests/: cli.rs
tests/common/: mod.rs
