[package]
name = "rush"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
flate2 = "1.1.5"
indicatif = "0.18.3"
reqwest = { version = "0.12.25", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
toml = "0.9.8"
