[package]
name = "rush"
version = "0.1.0"
edition = "2024"
description = "A lightning-fast toy package manager"
repository = "https://github.com/ekourtakis/rush"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.12.0"
dirs = "6.0.0"
flate2 = "1.1.5"
hex = "0.4.3"
indicatif = "0.18.3"
reqwest = { version = "0.12.25", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.23.0"
toml = "0.9.8"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
